fix: Improve equity bar alignement

--- a/src/components/TotalEquityBar/TotalEquityBar.scss
+++ b/src/components/TotalEquityBar/TotalEquityBar.scss
@@ -57,6 +57,9 @@
     }
 
     .operator {
+      display: flex;
+      flex: 1;
+      justify-content: center;
       text-align: center;
       width: 100%;
     }
